# CodeAssistBot

./: main.py  pasted_text_1726433647469.txt  pyproject.toml
static/css/: styles.css
static/js/: app.js
templates/: index.html
utils/: file_operations.py  git_operations.py  openai_integration.py
